--- a/AutosGyakorlo/AutosGyakorlo.csproj
+++ b/AutosGyakorlo/AutosGyakorlo.csproj
@@ -60,6 +60,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CsvOlvaso.cs" />
+    <Compile Include="Database1DataSet.cs">
+      <DependentUpon>Database1DataSet.xsd</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Database1DataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
