--- a/AutosGyakorlo/AutosGyakorlo.csproj
+++ b/AutosGyakorlo/AutosGyakorlo.csproj
@@ -60,16 +60,38 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CsvOlvaso.cs" />
+    <Compile Include="Database1DataSet.cs">
+      <DependentUpon>Database1DataSet.xsd</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Database1DataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Database1DataSet.xsd</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="JarmuControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="JarmuControl.Designer.cs">
+      <DependentUpon>JarmuControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="JarmuvekForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="JarmuvekForm.Designer.cs">
+      <DependentUpon>JarmuvekForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="KistehergepjarmuForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="KistehergepjarmuForm.Designer.cs">
+      <DependentUpon>KistehergepjarmuForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SzemelyGepjarmuForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SzemelyGepjarmuForm.Designer.cs">
+      <DependentUpon>SzemelyGepjarmuForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Jarmu.cs" />
     <Compile Include="JarmuAdatbazisKezelo.cs" />
@@ -77,8 +99,17 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SzemelyGepjarmu.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="JarmuControl.resx">
+      <DependentUpon>JarmuControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="KistehergepjarmuForm.resx">
+      <DependentUpon>KistehergepjarmuForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SzemelyGepjarmuForm.resx">
+      <DependentUpon>SzemelyGepjarmuForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="JarmuvekForm.resx">
+      <DependentUpon>JarmuvekForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
