--- a/AutosGyakorlo/AutosGyakorlo.csproj
+++ b/AutosGyakorlo/AutosGyakorlo.csproj
@@ -81,6 +81,12 @@
     <Compile Include="JarmuvekForm.Designer.cs">
       <DependentUpon>JarmuvekForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="KeresForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="KeresForm.Designer.cs">
+      <DependentUpon>KeresForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="KistehergepjarmuForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -101,6 +107,9 @@
     <Compile Include="SzemelyGepjarmu.cs" />
     <EmbeddedResource Include="JarmuControl.resx">
       <DependentUpon>JarmuControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="KeresForm.resx">
+      <DependentUpon>KeresForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="KistehergepjarmuForm.resx">
       <DependentUpon>KistehergepjarmuForm.cs</DependentUpon>
